--- a/app/src/main/res/layout/bottom_sheet_new_ai_game.xml
+++ b/app/src/main/res/layout/bottom_sheet_new_ai_game.xml
@@ -76,8 +76,8 @@
         android:id="@+id/colorToggleGroup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:singleSelection="true"
-        app:selectionRequired="true"
+        app:singleSelection="false"
+        app:selectionRequired="false"
         app:checkedButton="@id/blackButton"
         >
         <com.google.android.material.button.MaterialButton
