--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -186,6 +186,40 @@
                     android:fontFamily="sans-serif-medium"
                     android:checked="true"
                     />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="64dp"
+                    android:orientation="horizontal"
+                    >
+                    <TextView
+                        android:id="@+id/maxVisitsText"
+                        android:layout_width="0dp"
+                        android:layout_height="64dp"
+                        android:layout_weight="2"
+                        android:text="Max AI Playouts"
+                        android:lineSpacingExtra="4dp"
+                        android:gravity="center_vertical"
+                        android:drawableLeft="@drawable/ic_theme"
+                        android:paddingLeft="24dp"
+                        android:drawablePadding="24dp"
+                        android:fontFamily="sans-serif-medium"
+                        android:clickable="false"
+                        android:background="?android:selectableItemBackground"
+                        />
+                    <it.sephiroth.android.library.numberpicker.NumberPicker
+                        android:id="@+id/maxVisits"
+                        android:layout_width="0dp"
+                        android:layout_height="64dp"
+                        android:layout_weight="1"
+                        app:picker_max="99999"
+                        app:picker_min="1"
+                        android:progress="30"
+                        app:picker_stepSize="1"
+                        app:picker_tracker="exponential"
+                        app:picker_orientation="vertical"
+                        style="@style/NumberPicker"
+                        />
+                </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
         <TextView
