--- a/app/src/main/res/layout/view_name_value_button.xml
+++ b/app/src/main/res/layout/view_name_value_button.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
@@ -13,6 +13,12 @@
         android:textSize="14sp"
         />
 
+    <Space
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        />
+
     <TextView
         android:id="@+id/valueView"
         android:layout_width="wrap_content"
@@ -21,4 +27,10 @@
         tools:text="GnuGo (9k)"
         android:textColor="@color/colorAccent"
         android:textSize="12sp" />
+
+    <Space
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        />
 </LinearLayout>
