--- a/app/src/main/res/layout/view_player_profile.xml
+++ b/app/src/main/res/layout/view_player_profile.xml
@@ -4,135 +4,143 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/iconContainer"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginBottom="2dp"
-        app:cardBackgroundColor="#FFFFFF"
-        app:cardCornerRadius="50dp"
-        app:cardElevation="2dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/iconView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:srcCompat="@drawable/ic_person_outline" />
-    </androidx.cardview.widget.CardView>
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
-        android:orientation="vertical">
+        android:orientation="horizontal">
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/iconContainer"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp"
+            app:cardBackgroundColor="#FFFFFF"
+            app:cardCornerRadius="50dp"
+            app:cardElevation="2dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/iconView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/ic_person_outline" />
+        </androidx.cardview.widget.CardView>
 
         <LinearLayout
-            android:id="@+id/first_row"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
-
-            <TextView
-                android:id="@+id/nameView"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="start"
-                android:textSize="30sp"
-                android:maxLines="1"
-                tools:text="Bula"
-                app:autoSizeTextType="uniform"
-                app:autoSizeMinTextSize="12sp"
-                app:autoSizeMaxTextSize="30sp"
-                app:autoSizeStepGranularity="1sp"
-                android:textStyle="bold"
-                />
-
-            <androidx.emoji.widget.EmojiAppCompatTextView
-                android:id="@+id/flagView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="8dp"
-                tools:text="🇷🇴"
-                android:textSize="18sp"
-                />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/second_row"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_marginStart="15dp"
+            android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:id="@+id/first_row"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
+                android:orientation="horizontal"
+                >
 
                 <TextView
-                    android:id="@+id/rankViewTitle"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/nameView"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Current rank"
-                    android:textSize="12sp"
+                    android:layout_weight="1"
+                    android:gravity="start"
+                    android:textSize="30sp"
+                    android:maxLines="1"
+                    tools:text="Bula"
+                    app:autoSizeTextType="uniform"
+                    app:autoSizeMinTextSize="12sp"
+                    app:autoSizeMaxTextSize="30sp"
+                    app:autoSizeStepGranularity="1sp"
+                    android:textStyle="bold"
                     />
 
-                <TextView
-                    android:id="@+id/rankView"
+                <androidx.emoji.widget.EmojiAppCompatTextView
+                    android:id="@+id/flagView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    tools:text="20k"
-                    android:textSize="20sp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="8dp"
+                    tools:text="🇷🇴"
+                    android:textSize="18sp"
                     />
 
-                <TextView
-                    android:id="@+id/glickoView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="1616 ± 64"
-                    android:textSize="12sp"
-                    />
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="vertical">
+                android:id="@+id/second_row"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/highestRankViewTitle"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Highest"
-                    android:textSize="12sp"
-                    />
+                    android:layout_weight="1"
+                    android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/highestRankView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="8k"
-                    android:textSize="20sp"
-                    />
-                <TextView
-                    android:id="@+id/highestRankDateView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="Jul 22, 2020"
-                    android:textSize="12sp"
-                    />
+                    <TextView
+                        android:id="@+id/rankViewTitle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Current rank"
+                        android:textSize="12sp"
+                        />
+
+                    <TextView
+                        android:id="@+id/rankView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:text="20k"
+                        android:textSize="20sp"
+                        />
+
+                    <TextView
+                        android:id="@+id/glickoView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:text="1616 ± 64"
+                        android:textSize="12sp"
+                        />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/highestRankViewTitle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Highest"
+                        android:textSize="12sp"
+                        />
+
+                    <TextView
+                        android:id="@+id/highestRankView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:text="8k"
+                        android:textSize="20sp"
+                        />
+                    <TextView
+                        android:id="@+id/highestRankDateView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:text="Jul 22, 2020"
+                        android:textSize="12sp"
+                        />
+
+                </LinearLayout>
 
             </LinearLayout>
 
@@ -140,5 +148,171 @@
 
     </LinearLayout>
 
+    <TableLayout
+        android:id="@+id/rankTable"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:stretchColumns="*">
+
+        <TableRow>
+            <TextView
+                android:id="@+id/rowTitleOverall"
+                android:layout_column="2"
+                android:text="Overall"
+                android:textSize="14sp"
+                />
+
+            <TextView
+                android:id="@+id/rowTitleBlitz"
+                android:text="Blitz"
+                android:textSize="14sp"
+                />
+
+            <TextView
+                android:id="@+id/rowTitleLive"
+                android:text="Live"
+                android:textSize="14sp"
+                />
+
+            <TextView
+                android:id="@+id/rowTitleCorrespondence"
+                android:text="Correspondence"
+                android:textSize="14sp"
+                />
+        </TableRow>
+
+        <TableRow>
+            <TextView
+                android:id="@+id/columnTitleOverall"
+                android:layout_column="1"
+                android:text="Overall"
+                android:textSize="14sp"
+                />
+
+            <TextView
+                android:id="@+id/overallOverall"
+                android:text="-"
+                android:textSize="10sp"
+                />
+
+            <TextView
+                android:id="@+id/blitzOverall"
+                android:text="-"
+                android:textSize="10sp"
+                />
+
+            <TextView
+                android:id="@+id/liveOverall"
+                android:text="-"
+                android:textSize="10sp"
+                />
+
+            <TextView
+                android:id="@+id/correspondenceOverall"
+                android:text="-"
+                android:textSize="10sp"
+                />
+        </TableRow>
+
+        <TableRow>
+            <TextView
+                android:id="@+id/rowTitle9"
+                android:layout_column="1"
+                android:text="9x9"
+                android:textSize="14sp"
+                />
+
+            <TextView
+                android:id="@+id/overall9"
+                android:text="-"
+                android:textSize="10sp"
+                />
+
+            <TextView
+                android:id="@+id/blitz9"
+                android:text="-"
+                android:textSize="10sp"
+                />
+
+            <TextView
+                android:id="@+id/live9"
+                android:text="-"
+                android:textSize="10sp"
+                />
+
+            <TextView
+                android:id="@+id/correspondence9"
+                android:text="-"
+                android:textSize="10sp"
+                />
+        </TableRow>
+
+        <TableRow>
+            <TextView
+                android:id="@+id/rowTitle13"
+                android:layout_column="1"
+                android:text="13x13"
+                android:textSize="14sp"
+                />
+
+            <TextView
+                android:id="@+id/overall13"
+                android:text="-"
+                android:textSize="10sp"
+                />
+
+            <TextView
+                android:id="@+id/blitz13"
+                android:text="-"
+                android:textSize="10sp"
+                />
+
+            <TextView
+                android:id="@+id/live13"
+                android:text="-"
+                android:textSize="10sp"
+                />
+
+            <TextView
+                android:id="@+id/correspondence13"
+                android:text="-"
+                android:textSize="10sp"
+                />
+        </TableRow>
+
+        <TableRow>
+            <TextView
+                android:id="@+id/rowTitle19"
+                android:layout_column="1"
+                android:text="19x19"
+                android:textSize="14sp"
+                />
+
+            <TextView
+                android:id="@+id/overall19"
+                android:text="-"
+                android:textSize="10sp"
+                />
+
+            <TextView
+                android:id="@+id/blitz19"
+                android:text="-"
+                android:textSize="10sp"
+                />
+
+            <TextView
+                android:id="@+id/live19"
+                android:text="-"
+                android:textSize="10sp"
+                />
+
+            <TextView
+                android:id="@+id/correspondence19"
+                android:text="-"
+                android:textSize="10sp"
+                />
+        </TableRow>
+
+    </TableLayout>
 
 </LinearLayout>
