--- a/app/src/main/res/layout/fragment_aigame.xml
+++ b/app/src/main/res/layout/fragment_aigame.xml
@@ -334,7 +334,7 @@
                 android:foreground="?android:attr/selectableItemBackground"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                app:srcCompat="@drawable/ic_menu"
+                app:srcCompat="@drawable/ic_menu_hamburger"
                 app:tint="@color/disable_black" />
 
             <androidx.appcompat.widget.AppCompatImageView
