--- a/app/src/main/res/layout/fragment_aigame.xml
+++ b/app/src/main/res/layout/fragment_aigame.xml
@@ -306,9 +306,18 @@
         android:progress="50"
         app:indicatorColor="#FFFFFF"
         app:trackCornerRadius="3dp"
-        app:layout_constraintBottom_toTopOf="@id/playControls"
+        app:layout_constraintBottom_toTopOf="@id/winrateHistogram"
         app:layout_constraintTop_toBottomOf="@id/winrateLabel"
         app:trackColor="@android:color/black" />
+
+    <androidx.compose.ui.platform.ComposeView
+        android:id="@+id/winrateHistogram"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="14dp"
+        android:layout_marginRight="14dp"
+        app:layout_constraintBottom_toTopOf="@id/playControls"
+        app:layout_constraintTop_toBottomOf="@id/winrateProgressBar" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/playControls"
